# sfml-playground

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  Game.h  GameScene.h  TextBox.cpp  TextBox.h  main.cpp  mainMenuScene.cpp  mainMenuScene.h  testScene.cpp  testScene.h
